fix photo overlap problem

--- a/css/styles.css
+++ b/css/styles.css
@@ -51,10 +51,15 @@ a hover {
 }
 
 .shop{
+  width: 100%;
   padding: 00px;
   border:2px solid black;
   padding:20px;
   margin:10px;/*margin only works on row as whole*/
+}
+
+.shop img {
+  width: 20%;
 }
 
 #swatch0, #swatch1, #swatch2, #swatch3, #swatch4, #swatch5 {
